# orm_scylladb

./: Cargo.toml
examples/: scylla.rs
macro_lib/: lib.rs  scylla.rs
src/: conv_data.rs  lib.rs
